2005-09-28 14:57  Andrej Kacian <andrej@kacian.sk>
	* src: update to work with current irssi2 CVS

2005-08-22 22:40  Andrej Kacian <andrej@kacian.sk>
	* src/clientops-notify.c: Ignore anyone leaving the channel right
	  after we joined, if we don't have the person added as presence.
	* src/silc-message.[ch]: Wrote groundwork for private message sending.

2005-08-20 18:34  Andrej Kacian <andrej@kacian.sk>
	* src/silc-local-presence.c, README: Client-provided SILC keys can be
		used again. Fix some mistakes in README.

2005-08-20 01:05  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c, silc-message.c: Support actions

2005-08-14 14:33  Andrej Kacian <andrej@kacian.sk>
	* src: clientops-notify.c, support.c, silc-gateway-connection.c:
	       Make presence name lookup functions case-sensitive. Add "raw"
	       key to silc_events.

2005-08-14 13:29  Andrej Kacian <andrej@kacian.sk>
	* src/silc-channel-connection.c: Fixed segfault on channel connection
	  deinit.

2005-08-12 16:36  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c, clientops-notify.c, silc-gateway-connection.c,
	       silc.c: Don't let SILC client lib to set nickname on login,
	       but set it ourselves. Add mypresence and network event keys
	       to all silc_event events.

2005-08-12 15:25  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c: Handle unsuccesful channel join.

2005-08-10 21:00  Andrej Kacian <andrej@kacian.sk>
	* src: silc.h, clientops.c, silc-client.c, clientops-notify.c: Use
	       irssi2 macros for event key names where possible.

2005-08-09 23:57  Andrej Kacian <andrej@kacian.sk>
	* src: clientops.c, silc-channel-presence.[ch], clientops-notify.c
	       silc-gateway-connection.[ch], silc.c: Only send
	       gateway_logged_in event after we have logged in and acquired
	       correct nickname.

2005-09-05 13:35  Andrej Kacian <andrej@kacian.sk>
	* src: silc-gateway.h, silc-client.c, silc-local-presence.c,