@@ -56,6 +56,7 @@ void i_silc_operation_notify(SilcClient client,
 	struct channel_connection *chconn;
 	struct channel_presence *chpres;
 	struct presence *presence = NULL;
+	struct local_user *lu = client->application;
 
 	char *str = NULL, *str2 = NULL, *set_type = NULL, *set_by = NULL;
 	char *userhost = NULL, motd[2049];
@@ -101,7 +102,7 @@ void i_silc_operation_notify(SilcClient client,
 		case SILC_NOTIFY_TYPE_NONE:
 			str = va_arg(va, char *);
 
-			event = silc_event_new(SILC_EVENT_NOTIFY_NONE);
+			event = silc_server_event_new(lu, SILC_EVENT_NOTIFY_NONE);
 			event_add(event, EVENT_KEY_NETWORK_NAME,
 					gwconn->gateway->network->name);
 			event_add(event, EVENT_KEY_LOCAL_PRESENCE_NAME,
@@ -121,7 +122,7 @@ void i_silc_operation_notify(SilcClient client,
 			str = va_arg(va, char *);
 			client_entry = va_arg(va, SilcClientEntry);
 
-			event = silc_event_new(SILC_EVENT_NOTIFY_INVITE);
+			event = silc_server_event_new(lu, SILC_EVENT_NOTIFY_INVITE);
 			event_add(event, EVENT_KEY_NETWORK_NAME,
 					gwconn->gateway->network->name);
 			event_add(event, EVENT_KEY_LOCAL_PRESENCE_NAME,
@@ -137,7 +138,7 @@ void i_silc_operation_notify(SilcClient client,
 			client_entry = va_arg(va, SilcClientEntry);
 			channel_entry = va_arg(va, SilcChannelEntry);
 			
-			event = silc_event_new(SILC_EVENT_NOTIFY_JOIN);
+			event = silc_server_event_new(lu, SILC_EVENT_NOTIFY_JOIN);
 			event_add(event, EVENT_KEY_NETWORK_NAME,
 					gwconn->gateway->network->name);
 			event_add(event, EVENT_KEY_LOCAL_PRESENCE_NAME,
@@ -216,7 +217,7 @@ void i_silc_operation_notify(SilcClient client,
 
 			userhost = i_silc_userhost(client_entry);
 
-			event = silc_event_new(SILC_EVENT_NOTIFY_LEAVE);
+			event = silc_server_event_new(lu, SILC_EVENT_NOTIFY_LEAVE);
 			event_add(event, EVENT_KEY_NETWORK_NAME,
 					gwconn->gateway->network->name);
 			event_add(event, EVENT_KEY_LOCAL_PRESENCE_NAME,
@@ -255,7 +256,7 @@ void i_silc_operation_notify(SilcClient client,
 					client_entry->hostname != NULL )
 				userhost = i_silc_userhost(client_entry);
 
-			event = silc_event_new(SILC_EVENT_NOTIFY_SIGNOFF);
+			event = silc_server_event_new(lu, SILC_EVENT_NOTIFY_SIGNOFF);
 			event_add(event, EVENT_KEY_NETWORK_NAME,
 					gwconn->gateway->network->name);
 			event_add(event, EVENT_KEY_LOCAL_PRESENCE_NAME,
@@ -297,7 +298,7 @@ void i_silc_operation_notify(SilcClient client,
 			}
 			chconn = &silc_chconn->chconn;
 
-			event = silc_event_new(SILC_EVENT_NOTIFY_KICK);
+			event = silc_server_event_new(lu, SILC_EVENT_NOTIFY_KICK);
 			event_add(event, EVENT_KEY_NETWORK_NAME,
 					gwconn->gateway->network->name);
 			event_add(event, EVENT_KEY_LOCAL_PRESENCE_NAME,
@@ -330,7 +331,7 @@ void i_silc_operation_notify(SilcClient client,
 			if( !strcmp(old->nickname, new->nickname) )
 				break;
 
-			event = silc_event_new(SILC_EVENT_NOTIFY_NICK_CHANGE);
+			event = silc_server_event_new(lu, SILC_EVENT_NOTIFY_NICK_CHANGE);
 			event_add(event, EVENT_KEY_NETWORK_NAME,
 					gwconn->gateway->network->name);
 			event_add(event, EVENT_KEY_LOCAL_PRESENCE_NAME,
@@ -382,7 +383,7 @@ void i_silc_operation_notify(SilcClient client,
 			str = va_arg(va, char *);
 			channel_entry2 = va_arg(va, SilcChannelEntry);
 
-			event = silc_event_new(SILC_EVENT_NOTIFY_TOPIC_SET);
+			event = silc_server_event_new(lu, SILC_EVENT_NOTIFY_TOPIC_SET);
 			event_add(event, EVENT_KEY_NETWORK_NAME,
 					gwconn->gateway->network->name);
 			event_add(event, EVENT_KEY_LOCAL_PRESENCE_NAME,
@@ -405,7 +406,7 @@ void i_silc_operation_notify(SilcClient client,
 			break;		
 
 		default:
-			event = silc_event_new("unhandled");
+			event = silc_server_event_new(lu, "unhandled");
 			event_send(event);
 			break;
 	}
