@@ -27,7 +27,7 @@
 #include "lib.h"
 #include "ioloop.h"
 #include "chat-protocol.h"
-#include "event.h"
+#include "server-event.h"
 #include "local-user.h"
 #include "local-presence.h"
 #include "gateway-connection.h"
@@ -74,8 +74,9 @@ void i_silc_operation_say(SilcClient client, SilcClientConnection conn,
 	struct event *event;
 	char str[256];
 	va_list va;
+	struct local_user *lu = client->application;
 
-	event = silc_event_new(SILC_EVENT_SERVER_SAY);
+	event = silc_server_event_new(lu, SILC_EVENT_SERVER_SAY);
 
 	va_start(va, msg);
 
@@ -109,26 +110,28 @@ void i_silc_operation_channel_message(SilcClient client,
 	struct i_silc_channel_connection *silc_chconn =
 		i_silc_channel_connection_lookup_entry(silc_gwconn, channel);
 	struct channel_connection *ichconn = &silc_chconn->chconn;
+	struct local_user *lu = client->application;
 
-	event = event_new(EVENT_MSG);
+	event = server_event_new(lu, EVENT_MSG);
 
-	memset(content_type, 0, sizeof(content_type));
-	memset(transfer_encoding, 0, sizeof(transfer_encoding));
-
+	event_add_control(event, EVENT_CONTROL_GWCONN, ichconn->gwconn);
+	event_add(event, EVENT_KEY_PRESENCE_NAME, sender->nickname);
+	event_add(event, "address", "foo@bar.com");
 	event_add(event, EVENT_KEY_NETWORK_NAME,
 			ichconn->gwconn->gateway->network->name);
 	event_add(event, EVENT_KEY_LOCAL_PRESENCE_NAME,
 			ichconn->gwconn->local_presence->name);
 	event_add(event, EVENT_KEY_CHANNEL_CONN_NAME,
 			ichconn->channel->name);
-	event_add(event, EVENT_KEY_PRESENCE_NAME, sender->nickname);
-	event_add_control(event, EVENT_CONTROL_GWCONN, ichconn->gwconn);
 
 	valid_mime = silc_mime_parse(message, message_len,
 			NULL, 0, content_type, sizeof(content_type) - 1,
 			transfer_encoding, sizeof(transfer_encoding) - 1,
 			&mime_data_buffer, &mime_data_len);
 	
+	memset(content_type, 0, sizeof(content_type));
+	memset(transfer_encoding, 0, sizeof(transfer_encoding));
+
 	if( valid_mime == TRUE ) {
 		header_length = message_len - mime_data_len;
 		sprintf(header_length_str, "%d", header_length);
@@ -197,6 +200,7 @@ void i_silc_operation_command_reply(SilcClient client,
 	struct presence *presence;
 	char *channel_name, *new_nick;
 	va_list va;
+	struct local_user *lu = client->application;
 
 	va_start(va, status);
 
@@ -246,7 +250,7 @@ void i_silc_operation_command_reply(SilcClient client,
 				presence_set_name(presence, new_nick);
 			break;
 		case SILC_COMMAND_WHOIS:
-			event = silc_event_new("whoisreply");
+			event = silc_server_event_new(lu, "whoisreply");
 			event_send(event);
 			break;
 	}
