@@ -11,7 +11,7 @@
 unsigned int verify_message_signature(SilcClientEntry sender,
 		SilcMessageSignedPayload sig, SilcMessagePayload payload);
 
-struct event *silc_event_new(const char *name);
+struct event *silc_server_event_new(struct local_user *lu, const char *name);
 char *i_silc_gen_key_path(struct local_presence *lp, bool private_key);
 
 bool i_silc_load_keys(struct i_silc_local_presence_auth *auth, SilcPKCS *pkcs,
